--- a/index.html
+++ b/index.html
@@ -44,6 +44,25 @@
         <div id="home">
             <h1 class="welcome">Welcome</h1>
             <p class="intro">I'm a Graphic Designer and a Front-end Developer.</p>
+            <p class="message">As a graphic designer and front-end developer, I craft visually striking designs and seamless digital experiences. With expertise in Adobe Photoshop for high-end imagery and CorelDRAW for vector graphics and signage, alongside a strong foundation
+                in front-end development, I blend creativity with technical precision. Explore my work and see how I bring ideas to life through design and code.</p>
+            <div class="bgwhite">
+                <div class="column">
+                    <img class="homelogo" src="/images/graphic.png" alt="graphic_logo">
+                    <p class="tools">Graphic Design</p>
+                    <div class="move"></div>
+                </div>
+
+                <div class="column">
+                    <img class="homelogo" src="/images/web.jpg" alt="graphic_logo">
+                    <p class="tools">Front-End</p>
+                    <div class="move"></div>
+                </div>
+
+            </div>
+        </div>
+        <div id="graphic">
+
         </div>
 </body>
 
