--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                 in front-end development, I blend creativity with technical precision. Explore my work and see how I bring ideas to life through design and code.</p>
             <div class="bgwhite">
                 <div class="column">
-                    <img class="homelogo" src="/images/graphic.png" alt="graphic_logo">
+                    <img class="homelogo" src="./images/graphic.png" alt="graphic_logo">
                     <p class="tools">Graphic Design</p>
                     <div class="move"></div>
                 </div>
 
                 <div class="column">
-                    <img class="homelogo" src="/images/web.jpg" alt="graphic_logo">
+                    <img class="homelogo" src="./images/web.jpg" alt="graphic_logo">
                     <p class="tools">Front-End</p>
                     <div class="move"></div>
                 </div>
