--- a/index.html
+++ b/index.html
@@ -42,27 +42,47 @@
         </nav>
 
         <div id="home">
-            <h1 class="welcome">Welcome</h1>
-            <p class="intro">I'm a Graphic Designer and a Front-end Developer.</p>
-            <p class="message">As a graphic designer and front-end developer, I craft visually striking designs and seamless digital experiences. With expertise in Adobe Photoshop for high-end imagery and CorelDRAW for vector graphics and signage, alongside a strong foundation
-                in front-end development, I blend creativity with technical precision. Explore my work and see how I bring ideas to life through design and code.</p>
+            <div class="square">
+                <h1 class="welcome">Welcome</h1>
+                <img class="dp" src="/images/IMG_0492.jpeg" alt="profile-pic">
+                <p class="intro">I'm Kofi Agbenyegah Ahiataku,Aged 31. </p>
+                <span style="font-size: 18px; color: gold;">A graphic designer and front-end developer</p>
+                <p class="message">As a graphic designer and front-end developer, I craft visually striking designs and seamless digital experiences. With expertise in Adobe Photoshop for high-end imagery and CorelDRAW for vector graphics and signage, alongside a strong
+                    foundation in front-end development, I blend creativity with technical precision. Explore my work and see how I bring ideas to life through design and code.</p>
+            </div>
+        </div>
+        <div id="graphic">
             <div class="bgwhite">
                 <div class="column">
                     <img class="homelogo" src="./images/graphic.png" alt="graphic_logo">
-                    <p class="tools">Graphic Design</p>
+                    <p class="tools">Logos</p>
                     <div class="move"></div>
                 </div>
 
                 <div class="column">
                     <img class="homelogo" src="./images/web.jpg" alt="graphic_logo">
-                    <p class="tools">Front-End</p>
+                    <p class="tools">Flyers</p>
+                    <div class="move"></div>
+                </div>
+                <div class="column">
+                    <img class="homelogo" src="./images/graphic.png" alt="graphic_logo">
+                    <p class="tools">Letterheads</p>
                     <div class="move"></div>
                 </div>
 
-            </div>
-        </div>
-        <div id="graphic">
+                <div class="column">
+                    <img class="homelogo" src="./images/web.jpg" alt="graphic_logo">
+                    <p class="tools">Branding</p>
+                    <div class="move"></div>
+                </div>
+                <div class="column">
+                    <img class="homelogo" src="./images/graphic.png" alt="graphic_logo">
+                    <p class="tools">Brochure</p>
+                    <div class="move"></div>
+                </div>
 
+
+            </div>
         </div>
 </body>
 
