--- a/index.html
+++ b/index.html
@@ -42,14 +42,18 @@
         </nav>
 
         <div id="home">
-            <div class="square">
-                <h1 class="welcome">Welcome</h1>
-                <img class="dp" src="/images/IMG_0492.jpeg" alt="profile-pic">
-                <p class="intro">I'm Kofi Agbenyegah Ahiataku,Aged 31. </p>
-                <span style="font-size: 18px; color: gold;">A graphic designer and front-end developer</p>
+
+            <h1 class="welcome">Welcome</h1>
+            <img class="dp" src="./images/IMG_0492.jpeg" alt="profile-pic">
+            <p class="intro">Kofi Agbenyegah Ahiataku,</p>
+
+            <span style="font-size: 16px; color: white;">A graphic designer and front-end developer</p>
+                 
+                <div class="square">
                 <p class="message">As a graphic designer and front-end developer, I craft visually striking designs and seamless digital experiences. With expertise in Adobe Photoshop for high-end imagery and CorelDRAW for vector graphics and signage, alongside a strong
                     foundation in front-end development, I blend creativity with technical precision. Explore my work and see how I bring ideas to life through design and code.</p>
-            </div>
+         <div class="moves"></div>
+                </div>
         </div>
         <div id="graphic">
             <div class="bgwhite">
