--- a/index.html
+++ b/index.html
@@ -217,15 +217,15 @@ said 230 items an hour was OK, others noted expectaons were higher)</li> <li cla
                 <div class="duration"> <span class="bi bi-caret-left-fill"></span>
                    <div>
                     <p class="from">FROM</p>
-                    <p class="start">March 2025</p>
+                    <p class="start">Nov. 2022</p>
                     </div>
                     <div>
                     <p class="to">TO</p>
-                    <p class="end"> Present</p>
+                    <p class="end">Oct. 2023</p>
                     </div>
-                      <span>7 months </span>
-                      <p class="company">AMGLAD AFBB L.L.C</p>
-                      <span>Abu Dhabi, UAE</span>
+                      <span>12 months </span>
+                      <p class="company">CRIG-GHANA</p>
+                      <span>Akyim-Kukurantumi, GHana</span>
                 </div>
                 <div class="rolebox">
                     <p class="role">IT & Project Manager</p>
