--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/mobile.css" />
     <script src="./script.js"></script>
 </head>
 
@@ -103,7 +104,7 @@
                         <a href="#" id="arrow" class="bi bi-caret-right-fill" onclick="toggle(event)">
                 view more</a
               >
-              <p id="more" style="display: none">
+              <p id="more" style="display: none;">
                 Alongside my creative work, I bring over 8 years of hands-on
                 experience as an IT professional. I’ve managed complex systems,
                 optimized performance across Windows and Linux environments, and
@@ -195,7 +196,7 @@ said 230 items an hour was OK, others noted expectaons were higher)</li> <li cla
                     <p class="end">April 2024</p>
                     </div>
                       <span>6 months fixed Contract</span>
-                      <p class="company"></p>
+                      <p class="company">Marichael Links L.T.D</p>
                       <span>Accra, Ghana</span>
                 </div>
                 <div class="rolebox">
@@ -225,7 +226,7 @@ said 230 items an hour was OK, others noted expectaons were higher)</li> <li cla
                     </div>
                       <span>12 months </span>
                       <p class="company">CRIG-GHANA</p>
-                      <span>Akyim-Kukurantumi, GHana</span>
+                      <span>Akyim-Kukurantumi, Ghana</span>
                 </div>
                 <div class="rolebox">
                     <p class="role">IT & Project Manager</p>
