--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             >
               Send an Email</a
             >
-            <a href="./files/Kofi CV.pdf" download class="info bi bi-download">
+            <a href="./files/graph cv.pdf" download class="info bi bi-download">
               Download My Resume
             </a>
           </div>
