--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
               <span>Abu Dhabi, UAE</span>
             </div>
             <div class="rolebox">
-              <p class="role">IT Associate</p>
+              <p class="role">Associate</p>
               <ul>
                 <li class="respon">
                   Scanning of items to be placed in bins and on shelves as quick
