--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             <a href="#posters" class="portnav">POSTERS</a>
             <a href="#others" class="portnav">OTHERS</a>
           </div>
-          <section id="logos" class="section">
+          <section id="logos" class="section active">
             <img
               class="image"
               src="./images/portfolio/logos/logo.jpg"
