adding new images

--- a/index.html
+++ b/index.html
@@ -515,6 +515,11 @@
           <section id="logos" class="section active">
             <img
               class="image"
+              src="./images/portfolio/logos/GUAE.jpg"
+              alt="1"
+            />
+            <img
+              class="image"
               src="./images/portfolio/logos/logo.jpg"
               alt="1"
             />
@@ -616,12 +621,12 @@
             />
             <img
               class="image"
-              src="./images/portfolio/posters/POSTER4.jpg"
+              src="./images/portfolio/posters/POSTER 4.jpg"
               alt="7"
             />
             <img
               class="image"
-              src="./images/portfolio/posters/POSTER5.jpg"
+              src="./images/portfolio/posters/POSTER 5.jpg"
               alt="7"
             />
             <img
@@ -631,12 +636,22 @@
             />
           </section>
           <section id="others" class="section">
+            <img
+              class="image"
+              src="./images/portfolio/others/Amglad choco.jpg"
+              alt="1"
+            />
             <img class="image" src="./images/portfolio/others/1.jpg" alt="1" />
             <img
               class="image"
               src="./images/portfolio/others/2.jpg"
               alt="2"
               class="active"
+            />
+            <img
+              class="image"
+              src="./images/portfolio/others/Amglad Eid.jpg"
+              alt="3"
             />
             <img
               class="image"
