adding nav description

--- a/index.html
+++ b/index.html
@@ -51,26 +51,31 @@
                         href="#home"
                         ><span class="bi bi-house"></span
                       ></a>
+                      <i class="ext">Home</i>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link bi bi-clock-history" href="#experience"
                         ><span></span
                       ></a>
+                      <i class="ext">Experience</i>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#education"
                         ><span class="bi bi-mortarboard-fill"></span
                       ></a>
+                      <i class="ext">Education</i>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#skills"
                         ><span class="bi bi-file-earmark-person"></span
                       ></a>
+                      <i class="ext">skills</i>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#portfolio"
                         ><span class="bi bi-person-hearts"></span
                       ></a>
+                      <i class="ext">Showroom</i>
                     </li>
                   </ul>
                 </div>
