--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             >
               Send an Email</a
             >
-            <a href="./files/graph cv.pdf" download class="info bi bi-download">
+            <a href="./files/Kofi CV A.pdf" download class="info bi bi-download">
               Download My Resume
             </a>
           </div>
